--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "MDPS",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "author": "Mainstream <bellooladipupo41@gmail.com>",
+  "repository": "https://github.com/DavyBello/Medical-Diagnosis-and-Prescription-System.git",
   "license": "MIT",
   "engines": {
     "node": "8.9.1"
